tests/deploy_errors/module_not_found/error.txt
Error: 
    1 | use snot;
      |          ^ Module `snot` not found or not readable error in module path: 
                         - tests/deploy_errors/module_not_found/
                         - tremor-script/lib/
    2 | create instance broken from snot::badger